Projekt/Frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: reactfrontend
spec:
  replicas: 2 #2 bo kopia zapasowa
  selector:
    matchLabels:
      app: reactfrontend
  template:
    metadata:
      labels:
        app: reactfrontend
    spec:
      containers:
        - name: reactfrontend
          image: localhost:5000/reactfrontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
